<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    android:scrollbarSize="4dp"
    tools:context=".RegisterActivity"
    >
    <Button
        android:id="@+id/buttonRegisterBack"
        android:text="Back"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="2dp"
        android:layout_alignParentTop="true"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:text="DoorDrink Register"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="Full name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#AFB1B3"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#AFB1B3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinnerCustomer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/inputName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="email address"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#AFB1B3"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#AFB1B3"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCustomer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerCustomer"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCustomer" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="********"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#AFB1B3"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#AFB1B3"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@drawable/button_background"
        android:text="Register"
        android:textColor="@color/white"
        android:textColorHint="#000000"
        android:textColorLink="#FFFDFD"
        app:layout_constraintEnd_toEndOf="@+id/inputPostalCode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputPostalCode"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <EditText
        android:id="@+id/inputPostalCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="Postal Code (90007)"
        android:inputType="textPostalAddress"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputState"
        app:layout_constraintStart_toStartOf="@+id/inputState"
        app:layout_constraintTop_toBottomOf="@+id/inputState" />

    <EditText
        android:id="@+id/inputAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_background"
        android:hint="Address Line 1"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <EditText
        android:id="@+id/inputCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/input_background"
        android:hint="City"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputAddress"
        app:layout_constraintStart_toStartOf="@+id/inputAddress"
        app:layout_constraintTop_toBottomOf="@+id/inputAddress" />

    <EditText
        android:id="@+id/inputState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:hint="State (CA)"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputCity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputCity"
        app:layout_constraintTop_toBottomOf="@+id/inputCity" />

</androidx.constraintlayout.widget.ConstraintLayout>