<resources>
    <string name="app_name">USCDoorDrink</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="error_field_required">Error, field required</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="distance"></string>
    <string name="duration"></string>
    <string name="shopName">Choose a nearby shop!</string>


    <string-array name="registerPageOptions">
        <item>Customer</item>
        <item>Shop</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
</resources>